Add OpenAPI documentation support and enhance transaction management with user-specific queries and rate limiting configuration